[tool.poetry]
name = "unpaired_mr_to_ct_image_synthesis"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
dominate = "^2.6.0"
torch = "^1.10.1"
torchvision = "^0.11.2"
visdom = "^0.1.8"
matplotlib = "^3.5.1"
beautifulsoup4 = "^4.10.0"
scikit-image = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
